--- a/document/book.bib
+++ b/document/book.bib
@@ -36,9 +36,9 @@ Bascially people need to take into account WHAT kind of training people are gett
 This article supports view that things should be looked at in terms of polymorphism.}
 }
 
-@techreport{NASM201718HandbookPdf2018,
+@techreport{NationalAssociationSchools2018,
   address = {Reston, Virginia},
-  title = {{{NASM}}-2017-18-{{Handbook}}.Pdf},
+  title = {National {{Association}} of {{Schools}} of {{Music Handbook}}},
   institution = {{National Association of Schools of Music}},
   month = jun,
   year = {2018},
@@ -188,7 +188,12 @@ Interesting methdology, but they bascially say that the retention model is bette
   month = jul,
   year = {2007},
   pages = {5-36},
-  file = {/Users/davidjohnbaker/Zotero/storage/AJJW5HGV/Ockelford - 2007 - A Music Module in Working Memory Evidence from th.pdf}
+  file = {/Users/davidjohnbaker/Zotero/storage/AJJW5HGV/Ockelford - 2007 - A Music Module in Working Memory Evidence from th.pdf},
+  annote = {Uses Derek P as person and example to build upon Berz 1995 work on working memory and music pathway in the Baddely Hitch Model.
+
+Could read it more when getting to cognitive chapter.
+
+~}
 }
 
 @article{paneyEffectDirectingAttention2016,
@@ -204,22 +209,44 @@ Interesting methdology, but they bascially say that the retention model is bette
   month = jan,
   year = {2016},
   pages = {15-24},
-  file = {/Users/davidjohnbaker/Zotero/storage/QWC278IW/Paney - 2016 - The effect of directing attention on melodic dicta.pdf}
-}
+  file = {/Users/davidjohnbaker/Zotero/storage/QWC278IW/Paney - 2016 - The effect of directing attention on melodic dicta.pdf},
+  annote = {Control is better than treatment if you walk people through sightsinging
 
-@article{fournierCognitiveStrategiesSightsinging2017,
-  title = {Cognitive Strategies in Sight-Singing: {{The}} Development of an Inventory for Aural Skills Pedagogy},
-  issn = {0305-7356, 1741-3087},
-  shorttitle = {Cognitive Strategies in Sight-Singing},
-  doi = {10.1177/0305735617745149},
-  abstract = {This research aimed to identify, describe and categorize cognitive strategies related to sight-singing within aural skills education. Using a constant comparative method, we carried out a thematic content analysis using NVivo to categorize strategies in a broad range of sources, including six interviews, five scientific publications, two professional books, and two ear-training manuals. Findings revealed 72 cognitive strategies grouped into four main categories and 14 subcategories: reading mechanisms (pitch decoding, pattern building, validation), sight-singing (preparation, performance), reading skills acquisition (musical vocabulary enrichment, symbolic associations, internalization, rehearsal techniques) and learning support (self-regulation, attention, time management, motivation, stress). Our cognitive strategy inventory provides a new framework for the study of cognitive strategies in aural skills research, and offers new insights for teachers who implement explicit cognitive strategies within their sight-singing pedagogy.},
-  language = {en},
-  journal = {Psychology of Music},
-  author = {Fournier, Guillaume and Moreno Sala, Maria Teresa and Dub\'e, Francis and O'Neill, Susan},
-  month = dec,
-  year = {2017},
-  pages = {030573561774514},
-  file = {/Users/davidjohnbaker/Zotero/storage/REXAF7XV/Fournier et al. - 2017 - Cognitive strategies in sight-singing The develop.pdf}
+Why dictation --
+
+Dictation is often the most difficult activity for students, for indeed the complexity of skills needed to be\\
+successful is great. The students who are good at taking dictation have well-developed inner ears with\\
+a strong sense of tonality, a good musical memory, a knowledge (conscious or unconscious) of common\\
+patterns, and a knowledge of basic notational procedures. (Foulkes-Levy, 1997, pp. 21\textendash{}22)
+
+~
+
+TABLE THESE REVIEWS
+
+Despite its prominence in the music curriculum, few published studies have examined dictation\\
+since 2000. Only four studies were found: Gillespie (2001) surveyed aural skills instructors\\
+on their scoring of dictations; Norris (2003) studied the relationship between achievement in\\
+sight-singing and melodic dictation; Dooley and Deutsch (2010) asked whether having absolute\\
+pitch influences performance on musical dictation; and Paney and Buonviri (2014) interviewed\\
+high-school music teachers on their teaching of melodic dictation.\\
+Older studies identified the following difficulty factors in the completion of dictation assessments:\\
+tempo (Hofstetter, 1981), tonality (Dowling, 1978; Long, 1977; Oura \& Hatano, 1988;\\
+Pembrook, 1986), size of intervals (Ortmann, 1933), conjunct versus disjunct motion\\
+(Ortmann, 1933; Pembrook, 1986), length of the melody (Gephardt, 1978; Long, 1977;\\
+Pembrook, 1986), number of presentations of the melody (Hofstetter, 1981; Pembrook, 1986),\\
+context of the presentations (Schellenberg, 1985), participants' musical experience (Long,\\
+1977; Oura \& Hatano, 1988; Schellenberg, 1985; Taylor \& Pembrook, 1983), and familiarity\\
+with the style of music (Schellenberg, 1985).
+
+Karpinski argues against Pembrook 1986 and says tha tyou can build a better memory, seems like that kind of langauge is just wrong
+
+Weird that it used established melody and done from a recording 
+
+Also 30 second between hearings
+
+FOLLOW UP ON THESE REFERENCES
+
+~}
 }
 
 @article{buonviriMelodicDictationInstruction2015,
@@ -258,7 +285,10 @@ Also interesting statistics about what people use what systems.}
   month = jan,
   year = {2014},
   pages = {396-414},
-  file = {/Users/davidjohnbaker/Zotero/storage/HB8PVA5N/Paney and Buonviri - 2014 - Teaching Melodic Dictation in Advanced Placement M.pdf}
+  file = {/Users/davidjohnbaker/Zotero/storage/HB8PVA5N/Paney and Buonviri - 2014 - Teaching Melodic Dictation in Advanced Placement M.pdf},
+  annote = {Interview with high school people on teaching melodic dictation and what not
+
+~}
 }
 
 @article{buonviriEffectsPreparatorySinging2015,
@@ -274,7 +304,7 @@ Also interesting statistics about what people use what systems.}
   month = apr,
   year = {2015},
   pages = {102-113},
-  file = {/Users/davidjohnbaker/Zotero/storage/RI3XTCKF/Buonviri - 2015 - Effects of a Preparatory Singing Pattern on Melodi.pdf},
+  file = {/Users/davidjohnbaker/Zotero/storage/RI3XTCKF/Buonviri - 2015 - Effects of a Preparatory Singing Pattern on Melodi.pdf;/Users/davidjohnbaker/Zotero/storage/Z8GRULB2/butler1997.pdf},
   annote = {If you have people sing right afterwards, they forget materials
 
 === Strategies people use
@@ -460,33 +490,7 @@ BUONVIRI 2015b -- Find this data and re-do it with musical features
 ~}
 }
 
-@article{furbyEffectsPeerTutoring2016a,
-  title = {The {{Effects}} of {{Peer Tutoring}} on the {{Aural Skills Performance}} of {{Undergraduate Music Majors}}},
-  volume = {34},
-  issn = {8755-1233, 1945-0109},
-  doi = {10.1177/8755123314556547},
-  abstract = {As workloads of faculty and staff increase in higher education, it seems important for new learning opportunities to be devised to improve individual progress through basic musicianship courses. Many university music departments rely on in-class instruction and individual work sessions with the instructors of these courses to enhance student understanding. The purpose of this project was to determine the effect of peer tutoring on the aural skills performance of undergraduate music majors. Success within the aural skills classroom was determined through evaluation of performances of sight-singing examples and melodic and rhythmic dictation exercises. While no significant differences were found between the control and treatment groups, informal positive benefits of peer tutoring were noted.},
-  language = {en},
-  number = {3},
-  journal = {Update: Applications of Research in Music Education},
-  author = {Furby, Victoria J.},
-  month = jun,
-  year = {2016},
-  pages = {33-39},
-  file = {/Users/davidjohnbaker/Zotero/storage/N99GJPAV/Furby - 2016 - The Effects of Peer Tutoring on the Aural Skills P.pdf}
-}
-
-@article{davidbutlerWhyGulfMusic1997,
-  title = {Why the {{Gulf}} between {{Music Perception Research}} and {{Aural Training}}?},
-  language = {en},
-  number = {132},
-  journal = {Bulletin of the Council for Research in Music Education},
-  author = {David Butler},
-  year = {1997},
-  file = {/Users/davidjohnbaker/Zotero/storage/GPVERX2K/David Butler - 1997 - Why the Gulf between Music Perception Research and.pdf}
-}
-
-@article{pembrookInterferenceTranscriptionProcess24,
+@article{pembrookInterferenceTranscriptionProcess1986,
   title = {Interference of the {{Transcription Process}} and {{Other Selected Variables}} on {{Perception}} and {{Memory}} during {{Melodic Dictation}}},
   volume = {34},
   issn = {00224294},
@@ -495,16 +499,53 @@ BUONVIRI 2015b -- Find this data and re-do it with musical features
   number = {4},
   journal = {Journal of Research in Music Education},
   author = {Pembrook, Randall G.},
-  year = {24},
+  year = {1986},
   pages = {238},
   file = {/Users/davidjohnbaker/Zotero/storage/YIHEK2A4/Pembrook - 1986 - Interference of the Transcription Process and Othe.pdf},
   annote = {Good listings of people who are intested in music and melody from the 20th century
 
-THIS ONE NEEDS A LONGER READ ITSELF
+======================
 
-SWEET FUCKING GRAPHS
+Long Read:
 
-~}
+If you write sooner, do better
+
+* INVESTIGATE LIST OF FEATURES AT FRONT
+
+Sight reading rationale : McGaughey (1961) stated that\\
+"qualified musicians must develop reading, singing, and [italics added]\\
+notational skills in order to achieve acuity of aural perception and to\\
+make effective use of that acuity" (p. i).
+
+!! Find Ortmann Paper
+
+Interference and Memory decay explain wrongness
+
+!! Cuddy 1982 says its juts complex!!
+
+Experiment for Melodic Factors
+
+~~~ Tonality (categorical)
+
+~~~ Melodic Length (number of notes)
+
+~~~ motion -- types of intervals 
+
+Restrited range for singing
+
+length is significant (13\% of variance)
+
+tonality is significant (3\% of variance)
+
+motion significant -- 1\% of variance
+
+Lots of interactions (similar to byo)
+
+Lots of chance for type I error in this article
+
+claims 10--16 notes for melody (umm tempo?)
+
+schematize and figure it out as top down, real time suduko or something}
 }
 
 @article{berzWorkingMemoryMusic1995,
@@ -521,6 +562,115 @@ SWEET FUCKING GRAPHS
   year = {1995},
   pages = {353-364},
   file = {/Users/davidjohnbaker/Zotero/storage/S3ZKTMIA/Berz - 1995 - Working Memory in Music A Theoretical Model.pdf}
+}
+
+@article{davidbutlerWhyGulfMusic1997a,
+  title = {Why the {{Gulf}} between {{Music Perception Research}} and {{Aural Training}}?},
+  language = {en},
+  number = {132},
+  journal = {Bulletin of the Council for Research in Music Education},
+  author = {David Butler},
+  year = {1997},
+  file = {/Users/davidjohnbaker/Zotero/storage/23JDBLIK/David Butler - 1997 - Why the Gulf between Music Perception Research and.pdf},
+  annote = {Nice nicholas cook quote
+
+"a psychological theory of music is successful to the extent that it reflects perception. Musical perception is pluralistic and fluid; listeners make use of multiple cognitive frameworks and shift their strategies from one moment to the next. A psychological model of perception needs to embody these charac- teristics. But there is no reason why music theory should be like this. When a theorist analyzes a piece of music, [he or] she is taking up an interpretive stance in relation to it ... From this point of view, the psychologist's perceptual model is totally inappropriate because ... 'the resultant theoretical construct will be devoid of critical content: It cannot challenge our pre-formed responses because it sets out to reproduce them.' The aim of music theory, then, is to go beyond perception. In fact, you might put the point polemically and say that, from the music-theoretical point of view, an analysis can have value only to the extent that it deviates from perception. . . ." (Cook, 1994, p. 89)
+
+~
+
+One problem that quickly became apparent in the transcripts has to do with a general lack of focus in defining educational objectives in aural training
+
+~
+
+The broadly stated goal in the main- stream is a well developed "inner ear"; the primary specific objective is good relative pitch and a solid sense of tonality, described as a clear aural sense of scale-step. The primary - almost sole - choice of classroom/lab activities is traditional sight-singing and dictation. In the secondary stream, the broadly stated goal is an amalgam of aural mastery and performance skill: aural training and performance are viewed as inseparable, but for varying reasons. Classroom and lab activities vary widely, depending on these reasons.
+
+~
+
+and fixed do is viewed as a performing musician's Esperanto.
+
+~
+
+skill. Even Edward T. Cone (1968), one of our best analytical theorists, has written that "active listening is, after all, a kind of vicarious performance..."
+
+~
+
+Similarly, there just aren't many music theorists who express a deep interest in aural training, and are willing and able to get their hands dirty conducting experimental research to test their ideas
+
+~
+
+~}
+}
+
+@article{furbyEffectsPeerTutoring2016,
+  title = {The {{Effects}} of {{Peer Tutoring}} on the {{Aural Skills Performance}} of {{Undergraduate Music Majors}}},
+  volume = {34},
+  issn = {8755-1233, 1945-0109},
+  doi = {10.1177/8755123314556547},
+  abstract = {As workloads of faculty and staff increase in higher education, it seems important for new learning opportunities to be devised to improve individual progress through basic musicianship courses. Many university music departments rely on in-class instruction and individual work sessions with the instructors of these courses to enhance student understanding. The purpose of this project was to determine the effect of peer tutoring on the aural skills performance of undergraduate music majors. Success within the aural skills classroom was determined through evaluation of performances of sight-singing examples and melodic and rhythmic dictation exercises. While no significant differences were found between the control and treatment groups, informal positive benefits of peer tutoring were noted.},
+  language = {en},
+  number = {3},
+  journal = {Update: Applications of Research in Music Education},
+  author = {Furby, Victoria J.},
+  month = jun,
+  year = {2016},
+  pages = {33-39},
+  file = {/Users/davidjohnbaker/Zotero/storage/USMY6AHW/Furby - 2016 - The Effects of Peer Tutoring on the Aural Skills P.pdf},
+  annote = {Most studies have\\
+found no significant difference in effectiveness between\\
+pitch systems (Brown, 2001; Buchanan, 1979; Henry \&\\
+Killian, 2005).
+
+However, multiple studies from throughout\\
+the United States have suggested that movable-do\\
+solf\`ege is the most popular method of sight-singing\\
+instruction ( (Bradley, 2006; Collins, 1979; Demorest,\\
+2001; McClung, 2001).
+
+~
+
+The development of dictation skills has not been as\\
+rigorously researched as sight-singing skills; however,\\
+there are a number of instructional sources that contain\\
+practices that may be helpful. Many teachers have emphasized\\
+the importance of instructor and/or peer feedback\\
+(Liebhaber, 2001), isolation of rhythm and melody\\
+(Banton, 1995; Bland, 1984; Root, 1931; Wilson, 1954),\\
+listening before writing (Banton, 1995), recognizing patterns\\
+aurally (Banton, 1995; Bland 1984; Root, 1931),\\
+and singing silently or aloud while dictating (Klonoski,\\
+2006).\\
+Root
+
+~
+
+~}
+}
+
+@article{fournierCognitiveStrategiesSightsinging2017a,
+  title = {Cognitive Strategies in Sight-Singing: {{The}} Development of an Inventory for Aural Skills Pedagogy},
+  issn = {0305-7356, 1741-3087},
+  shorttitle = {Cognitive Strategies in Sight-Singing},
+  doi = {10.1177/0305735617745149},
+  abstract = {This research aimed to identify, describe and categorize cognitive strategies related to sight-singing within aural skills education. Using a constant comparative method, we carried out a thematic content analysis using NVivo to categorize strategies in a broad range of sources, including six interviews, five scientific publications, two professional books, and two ear-training manuals. Findings revealed 72 cognitive strategies grouped into four main categories and 14 subcategories: reading mechanisms (pitch decoding, pattern building, validation), sight-singing (preparation, performance), reading skills acquisition (musical vocabulary enrichment, symbolic associations, internalization, rehearsal techniques) and learning support (self-regulation, attention, time management, motivation, stress). Our cognitive strategy inventory provides a new framework for the study of cognitive strategies in aural skills research, and offers new insights for teachers who implement explicit cognitive strategies within their sight-singing pedagogy.},
+  language = {en},
+  journal = {Psychology of Music},
+  author = {Fournier, Guillaume and Moreno Sala, Maria Teresa and Dub\'e, Francis and O'Neill, Susan},
+  month = dec,
+  year = {2017},
+  pages = {030573561774514},
+  file = {/Users/davidjohnbaker/Zotero/storage/ABS4ZMEW/Fournier et al. - 2017 - Cognitive strategies in sight-singing The develop.pdf}
+}
+
+@book{karpinskiAuralSkillsAcquisition2000,
+  title = {Aural {{Skills Acquisition}}: {{The Development}} of {{Listening}}, {{Reading}}, and {{Performing Skills}} in {{College}}-Level {{Musicians}}},
+  isbn = {978-0-19-511785-1},
+  shorttitle = {Aural {{Skills Acquisition}}},
+  abstract = {This book is a hands-on investigation of the stages musicians go through as they learn to hear, read, and perform music. It draws on the latest research in music perception and cognition, music theory, and pedagogy, along with centuries of insight from music theorists, composers, and performers.The first part explores the development of music listening skills, including such broader activities as dictation and transcription, and specific abilities such as meter perception, short-term musical memory, and tonic inference. The second part then examines the skills involved in reading and performing music. It looks at such physical skills as vocal production and eye movements and at such complex integrated tasks as sight-singing transpositions and modulations. Throughout the book the author presents these skills in their musical contexts and emphasizes their roles in the general development of musicality.Aural Skills Acquisition builds important bridges between music theory, cognitive psychology, and pedagogy. It subjects ideas from music theory to the rigors of psychological testing and combines findings from the psychology of learning with ideas and methods of contemporary music theory. It will prove an invaluable guide for music teachers, music theorists, and psychologists interested in music perception and cognition.},
+  language = {en},
+  publisher = {{Oxford University Press}},
+  author = {Karpinski, Gary Steven},
+  year = {2000},
+  keywords = {Music / Instruction \& Study / Techniques,Music / Instruction \& Study / Theory,Music / Instruction \& Study / Voice,Music / Reference}
 }
 
 
